syntax = "proto3";

package rivet.backend.pkg.mm_config.namespace_get;

import "proto/common.proto";
import "proto/backend/matchmaker.proto";

message Request {
	repeated rivet.common.Uuid namespace_ids = 1;
}

message Response {
	message Namespace {
		rivet.common.Uuid namespace_id = 1;
		rivet.backend.matchmaker.NamespaceConfig config = 2;
	}

	repeated Namespace namespaces = 1;
}
